--- a/api/qsharp/microsoft.quantum.environment.getqubitsavailabletouse.yml
+++ b/api/qsharp/microsoft.quantum.environment.getqubitsavailabletouse.yml
@@ -12,17 +12,17 @@ output:
   content: Int
   types:
   - summary: >-
-      可在 `using` 语句中分配的 qubits 的数目。
+      可在`using`语句中分配的 qubits 的数目。
 
-      如果正在使用的目标计算机未提供此信息，则返回 `-1`。
+      如果正在使用的目标计算机未提供此信息， `-1`则返回。
     isPrimitive: true
     uid: Int
 seeAlso:
 - getqubitsavailabletoborrow
 metadata:
-  ms.openlocfilehash: 1cb1331aa26ec9755a9e379336f46387b61bb0ae
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 82d8c27064cbb234b32707aa31fb0869f66ce23c
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73230460"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682400"
