--- a/api/qsharp/microsoft.quantum.errorcorrection.bitflipcode.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.bitflipcode.yml
@@ -11,12 +11,12 @@ input:
 output:
   content: Microsoft.Quantum.ErrorCorrection.QECC
   types:
-  - summary: 通过指定 `QECC` 类型，返回量程错误更正代码的实现。
+  - summary: 通过指定`QECC`类型返回量程错误更正代码的实现。
     uid: microsoft.quantum.errorcorrection.qecc
 metadata:
-  ms.openlocfilehash: bd9fdd54cf79610fa83ed99f4c94c89b7218c2c6
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 3fb7c03f36a75d98238bbacfd7eb2a207894bb90
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73230409"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682378"
