--- a/api/qsharp/microsoft.quantum.errorcorrection.recover.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.recover.yml
@@ -3,16 +3,16 @@ uid: microsoft.quantum.errorcorrection.recover
 name: Recover
 type: operation
 namespace: Microsoft.Quantum.ErrorCorrection
-summary: 按照 `QECC` 类型描述的量程代码执行一轮错误更正。
+summary: 按`QECC`类型描述的量程代码执行一轮错误更正。
 syntax: 'operation Recover (code : Microsoft.Quantum.ErrorCorrection.QECC, fn : Microsoft.Quantum.ErrorCorrection.RecoveryFn, logicalRegister : Microsoft.Quantum.ErrorCorrection.LogicalRegister) : Unit'
 input:
   content: '(code : Microsoft.Quantum.ErrorCorrection.QECC, fn : Microsoft.Quantum.ErrorCorrection.RecoveryFn, logicalRegister : Microsoft.Quantum.ErrorCorrection.LogicalRegister)'
   types:
   - name: code
-    summary: 作为 `QECC` 类型打包的量程错误更正代码描述了量程数据的编码和解码，以及如何测量 syndromes 错误。
+    summary: 打包为`QECC`类型的量程错误更正代码描述了量程数据的编码和解码，以及如何测量 syndromes 错误。
     uid: microsoft.quantum.errorcorrection.qecc
   - name: fn
-    summary: '`RecoveryFn`，它将每个错误症状映射到更正检测到的错误的 `Pauli[]` 操作。'
+    summary: 一个`RecoveryFn` ，它将每个错误症状`Pauli[]`映射到更正检测到的错误的操作。
     uid: microsoft.quantum.errorcorrection.recoveryfn
   - name: logicalRegister
     summary: 定义了稳定程序代码的 qubits 的数组。
@@ -27,9 +27,9 @@ seeAlso:
 - microsoft.quantum.canon.recoveryfn
 - microsoft.quantum.canon.logicalregister
 metadata:
-  ms.openlocfilehash: baaa5862dd189a04667081d762900931e6b5e766
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 2a873e06c20bf62c998b1096d862d26ff89aa134
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73220345"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682293"
