--- a/api/qsharp/microsoft.quantum.simulation.addgeneratorsystems.yml
+++ b/api/qsharp/microsoft.quantum.simulation.addgeneratorsystems.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.simulation.addgeneratorsystems
 name: AddGeneratorSystems
 type: function
 namespace: Microsoft.Quantum.Simulation
-summary: 添加了两个用于创建新 `GeneratorSystem`的 `GeneratorSystem`。
+summary: 添加两`GeneratorSystem`个以创建新`GeneratorSystem`的。
 syntax: 'function AddGeneratorSystems (generatorSystemA : Microsoft.Quantum.Simulation.GeneratorSystem, generatorSystemB : Microsoft.Quantum.Simulation.GeneratorSystem) : Microsoft.Quantum.Simulation.GeneratorSystem'
 input:
   content: '(generatorSystemA : Microsoft.Quantum.Simulation.GeneratorSystem, generatorSystemB : Microsoft.Quantum.Simulation.GeneratorSystem)'
@@ -17,14 +17,14 @@ input:
 output:
   content: Microsoft.Quantum.Simulation.GeneratorSystem
   types:
-  - summary: 一个 `GeneratorSystem`，它表示作为输入生成器系统总数的系统。
+  - summary: 一个`GeneratorSystem` ，它表示作为输入生成器系统的总和的系统。
     uid: microsoft.quantum.simulation.generatorsystem
 seeAlso:
 - microsoft.quantum.canon.generatorsystem
 metadata:
-  ms.openlocfilehash: 33155c0af61281bc34b7af5ecb6afe404d3e427d
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 09ce9de385a86207d69224ed3d90a3294f93fdb4
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73066058"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82683080"
