--- a/api/qsharp/microsoft.quantum.simulation.identitygeneratorindex.yml
+++ b/api/qsharp/microsoft.quantum.simulation.identitygeneratorindex.yml
@@ -3,13 +3,13 @@ uid: microsoft.quantum.simulation.identitygeneratorindex
 name: IdentityGeneratorIndex
 type: function
 namespace: Microsoft.Quantum.Simulation
-summary: 返回与零 Hamiltonian （`H = 0`）一致的生成器索引，该索引与标识演化操作相对应。
+summary: 返回与零 Hamiltonian （ `H = 0`与标识演化操作相对应）一致的生成器索引。
 syntax: 'function IdentityGeneratorIndex (idxTerm : Int) : Microsoft.Quantum.Simulation.GeneratorIndex'
 input:
   content: '(idxTerm : Int)'
   types:
   - name: idxTerm
-    summary: 此输入将被忽略，并定义为与 <xref:microsoft.quantum.simulation.generatorsystem> 用户定义类型保持一致。
+    summary: 此输入将被忽略，并定义为与<xref:microsoft.quantum.simulation.generatorsystem>用户定义的类型保持一致。
     isPrimitive: true
     uid: Int
 output:
@@ -18,9 +18,9 @@ output:
   - summary: 表示 Hamiltonian $H = $0 下的演变的生成器索引。
     uid: microsoft.quantum.simulation.generatorindex
 metadata:
-  ms.openlocfilehash: 004eea82988c6a4f6c776802d5f4634f600ed404
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: b498cc055bed2fcc69ac28548fc08b2bbaa74430
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73065582"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82683056"
