--- a/api/qsharp/microsoft.quantum.simulation.multiplygeneratorsystem.yml
+++ b/api/qsharp/microsoft.quantum.simulation.multiplygeneratorsystem.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.simulation.multiplygeneratorsystem
 name: MultiplyGeneratorSystem
 type: function
 namespace: Microsoft.Quantum.Simulation
-summary: 将 `GeneratorSystem`中所有字词的系数相乘。
+summary: 将`GeneratorSystem`中所有字词的系数相乘。
 syntax: 'function MultiplyGeneratorSystem (multiplier : Double, generatorSystem : Microsoft.Quantum.Simulation.GeneratorSystem) : Microsoft.Quantum.Simulation.GeneratorSystem'
 input:
   content: '(multiplier : Double, generatorSystem : Microsoft.Quantum.Simulation.GeneratorSystem)'
@@ -13,19 +13,19 @@ input:
     isPrimitive: true
     uid: Double
   - name: generatorSystem
-    summary: 要相乘的 `GeneratorSystem`。
+    summary: 作为被乘数的 `GeneratorSystem`。
     uid: microsoft.quantum.simulation.generatorsystem
 output:
   content: Microsoft.Quantum.Simulation.GeneratorSystem
   types:
-  - summary: 一个 `GeneratorSystem`，它表示系数系数 `multiplier` 较大的系统。
+  - summary: ， `GeneratorSystem`它表示系数大于系数`multiplier`的系统。
     uid: microsoft.quantum.simulation.generatorsystem
 seeAlso:
 - microsoft.quantum.canon.generatorsystem
 metadata:
-  ms.openlocfilehash: e96870c4e59773542924dcd247aedc498d3f3307
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: efdc509ce877e58db1fb365795f2913ce2556563
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73065446"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682572"
