--- a/api/qsharp/microsoft.quantum.simulation.simulationalgorithm.yml
+++ b/api/qsharp/microsoft.quantum.simulation.simulationalgorithm.yml
@@ -7,14 +7,14 @@ summary: >-
   表示与时间无关的模拟算法。
 
 
-  与时间无关的模拟技术可转换 <xref:microsoft.quantum.simulation.evolutiongenerator>
+  与时间无关的模拟技术将<xref:microsoft.quantum.simulation.evolutiongenerator>
 
   到某个时间间隔内的单一时间演变。
 syntax: newtype SimulationAlgorithm = ((Double, Microsoft.Quantum.Simulation.EvolutionGenerator, Qubit[]) => Unit is Adj + Ctl);
 metadata:
-  ms.openlocfilehash: 0d70a6f73c49f4759473981cd2f34254f7d721f7
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 8fa6845599852a972d152870a926a499272a43a3
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73221620"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682487"
