--- a/api/qsharp/microsoft.quantum.diagnostics.nearequalityfactd.yml
+++ b/api/qsharp/microsoft.quantum.diagnostics.nearequalityfactd.yml
@@ -4,7 +4,7 @@ name: NearEqualityFactD
 type: function
 namespace: Microsoft.Quantum.Diagnostics
 summary: 断言传统浮点值的预期值为小公差 1e-10。
-remarks: 这等效于硬编码容差为 $10 ^{-10}$ 的 <xref:microsoft.quantum.diagnostics.equalitywithintolerancefact>。
+remarks: 这等效于<xref:microsoft.quantum.diagnostics.equalitywithintolerancefact>带有硬编码容差 $10 ^{-10}$ 的。
 syntax: 'function NearEqualityFactD (actual : Double, expected : Double) : Unit'
 input:
   content: '(actual : Double, expected : Double)'
@@ -23,9 +23,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: 9bbf1ced753b2fde5a3f8fb20417053a47866ada
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 539dfc449493e5a6a2392572d5a7b7184b67f1f6
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73230494"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682441"
