--- a/api/qsharp/microsoft.quantum.errorcorrection.recoveryfn.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.recoveryfn.yml
@@ -3,12 +3,12 @@ uid: microsoft.quantum.errorcorrection.recoveryfn
 name: RecoveryFn
 type: newtype
 namespace: Microsoft.Quantum.ErrorCorrection
-summary: 函数的类型，它将错误症状映射到更正检测到的错误的 `Pauli[]` 操作序列。
+summary: 用于将错误症状映射到一系列可更正检测到`Pauli[]`的错误的操作的类型。
 syntax: newtype RecoveryFn = (Microsoft.Quantum.ErrorCorrection.Syndrome -> Pauli[]);
 metadata:
-  ms.openlocfilehash: 86d0c6444a3e822525f605f2c15978323b9e1caf
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 22e0388c451f81a9df4e446104987685bdd458c3
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73220311"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682261"
