--- a/api/qsharp/microsoft.quantum.errorcorrection.steanecode.yml
+++ b/api/qsharp/microsoft.quantum.errorcorrection.steanecode.yml
@@ -8,7 +8,7 @@ remarks: >-
   此代码在以下文章中找到：
 
 
-  - 答： Steane，"多粒子干扰和量程错误纠正"，过程。 Roy. Lond。 A452 （1996） pp 2551;https://arxiv.org/abs/quant-ph/9601029。
+  - A. Steane，"多粒子干扰和量程错误纠正"，过程。 Roy. Lond。 A452 （1996） pp 2551;https://arxiv.org/abs/quant-ph/9601029.
 syntax: 'function SteaneCode () : Microsoft.Quantum.ErrorCorrection.CSS'
 input:
   content: ()
@@ -19,9 +19,9 @@ output:
   - summary: CSS 类型的一个对象，该对象收集所有相关数据，以便对⟦7、1、3⟧ Steane 代码执行编码和错误更正。
     uid: microsoft.quantum.errorcorrection.css
 metadata:
-  ms.openlocfilehash: 353ea31a44965d478379a50a5b0b6520740a378a
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: fd961a82ad1fb99abc9f4b3d7ba061d10680a3aa
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73220328"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682236"
