--- a/api/qsharp/microsoft.quantum.intrinsic.measure.yml
+++ b/api/qsharp/microsoft.quantum.intrinsic.measure.yml
@@ -7,9 +7,9 @@ summary: >-
   对指定的 Pauli 中的一个或多个 qubits 执行联合度量。
 
 
-  此分发提供的输出结果为： \begin{align} \Pr （\texttt{Zero} | \ket{\psi}） = \frac12 \braket{\psi \mid | \left （\boldone + P_0 \otimes P_1 \otimes \cdots \otimes P_ {N-1} \right） \mid | \psi}，\end{align}，其中 $P _i $ 是 $i `bases`$ th 元素，其中 $N = \texttt{Length} （\texttt{bases}） $。
+  此分发提供的输出结果为： \begin{align} \Pr （\texttt{Zero} | \ket{\psi}） = \frac12 \braket{\psi \mid | \left （\boldone + P_0 \otimes P_1 \otimes \cdots \otimes P_ {N-1} \right） \mid | \psi}，\end{align}，其中 $P _i $ 是的 $i $ th 元素`bases`，其中 $N = \texttt{Length} （\texttt{bases}） $。
 
-  也就是说，度量值返回一个 `Result` $d $，以使观察到的度量值的 eigenvalue 为 $ （-1） ^ d $。
+  也就是说，度量返回`Result` $d $，以使观察到的度量值的 eigenvalue 为 $ （-1） ^ d $。
 remarks: 如果基础数组和 qubit 数组的长度不同，则操作将失败。
 syntax: 'operation Measure (bases : Pauli[], qubits : Qubit[]) : Result'
 input:
@@ -28,13 +28,13 @@ input:
 output:
   content: Result
   types:
-  - summary: 如果观察到 $ + $1 eigenvalue，则 `Zero` `One` 是否观察到 $-$1 eigenvalue。
+  - summary: '`Zero`如果观察到 $ + $1 eigenvalue，并`One`观察到 $-$1 eigenvalue，则为。'
     isPrimitive: true
     uid: Result
 metadata:
-  ms.openlocfilehash: 65390f851d82eb579d89072dc770f3ce077ce515
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: a2f89d1eea48ac0a4dab7e35ef661d89a40ae84a
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73234098"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682859"
