--- a/api/qsharp/microsoft.quantum.math.signi.yml
+++ b/api/qsharp/microsoft.quantum.math.signi.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.math.signi
 name: SignI
 type: function
 namespace: Microsoft.Quantum.Math
-summary: 返回一个整数，该整数指示数字的符号。
+summary: 返回指示数字符号的整数。
 remarks: 有关更多详细信息，请参阅[system.object](https://docs.microsoft.com/dotnet/api/system.math.sign) 。
 syntax: 'function SignI (a : Int) : Int'
 input:
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: bc4f780ee5151a3bb2569108bd3569a73f8a3895
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: c320d9ce4d1e4c79377ac62fcb28fcc52c66c526
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73223694"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682729"
