--- a/api/qsharp/microsoft.quantum.math.signl.yml
+++ b/api/qsharp/microsoft.quantum.math.signl.yml
@@ -3,7 +3,7 @@ uid: microsoft.quantum.math.signl
 name: SignL
 type: function
 namespace: Microsoft.Quantum.Math
-summary: 返回一个整数，该整数指示数字的符号。
+summary: 返回指示数字符号的整数。
 remarks: 有关更多详细信息，请参阅[system.object](https://docs.microsoft.com/dotnet/api/system.math.sign) 。
 syntax: 'function SignL (a : BigInt) : Int'
 input:
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 8aa5404d9f0df648c78c7d0de0981b4a8b108e01
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 426c59418b741c3369a3b5d733bc2e3488d44761
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73223643"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682719"
