--- a/api/qsharp/microsoft.quantum.research.chemistry.jwoptimizedgeneratorsystem.yml
+++ b/api/qsharp/microsoft.quantum.research.chemistry.jwoptimizedgeneratorsystem.yml
@@ -3,23 +3,23 @@ uid: microsoft.quantum.research.chemistry.jwoptimizedgeneratorsystem
 name: JWOptimizedGeneratorSystem
 type: function
 namespace: Microsoft.Quantum.Research.Chemistry
-summary: 将 `JWOptimizedHTerms` 描述的 Hamiltonian 转换为 `GeneratorSystem` 在此文件中定义的 `GeneratorIndex` 约定。
+summary: 将描述的 Hamiltonian 转换`JWOptimizedHTerms`为用`GeneratorSystem`此文件中定义的`GeneratorIndex`约定表示的。
 syntax: 'function JWOptimizedGeneratorSystem (data : Microsoft.Quantum.Chemistry.JordanWigner.JWOptimizedHTerms) : Microsoft.Quantum.Simulation.GeneratorSystem'
 input:
   content: '(data : Microsoft.Quantum.Chemistry.JordanWigner.JWOptimizedHTerms)'
   types:
   - name: data
-    summary: '`JWOptimizedHTerms` 格式的 Hamiltonian 说明。'
+    summary: '`JWOptimizedHTerms`格式的 Hamiltonian 说明。'
     uid: microsoft.quantum.chemistry.jordanwigner.jwoptimizedhterms
 output:
   content: Microsoft.Quantum.Simulation.GeneratorSystem
   types:
-  - summary: Hamiltonian 的表示形式 `GeneratorSystem`。
+  - summary: Hamiltonian 的表示形式`GeneratorSystem`。
     uid: microsoft.quantum.simulation.generatorsystem
 metadata:
-  ms.openlocfilehash: 5f5037767f9737391f3fd07d3dd0e330f8995f56
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 54b172085c66a826a571c5eb2e6dc0a2bfa303a4
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73066160"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82683095"
