--- a/api/qsharp/microsoft.quantum.simulation.inttopauli.yml
+++ b/api/qsharp/microsoft.quantum.simulation.inttopauli.yml
@@ -9,19 +9,19 @@ input:
   content: '(idx : Int)'
   types:
   - name: idx
-    summary: 要转换为 Pauli 运算符 `0..3` 范围内的整数。
+    summary: 要转换为 Pauli `0..3`运算符的范围内的整数。
     isPrimitive: true
     uid: Int
 output:
   content: Pauli
   types:
-  - summary: '`[PauliI, PauliX, PauliY, PauliZ][idx]`给定的 `Pauli` 运算符。'
+  - summary: 给定`Pauli`的`[PauliI, PauliX, PauliY, PauliZ][idx]`运算符。
     isPrimitive: true
     uid: Pauli
 metadata:
-  ms.openlocfilehash: ca2ed56364d9fee748ac53b3f7f0aa40a96475b9
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 92d9d1e29d85c57d22cb0d7b9867986bf0768bc5
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73065480"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682595"
