--- a/api/qsharp/microsoft.quantum.simulation.paulicoefficientfromgenidx.yml
+++ b/api/qsharp/microsoft.quantum.simulation.paulicoefficientfromgenidx.yml
@@ -3,24 +3,24 @@ uid: microsoft.quantum.simulation.paulicoefficientfromgenidx
 name: PauliCoefficientFromGenIdx
 type: function
 namespace: Microsoft.Quantum.Simulation
-summary: 提取 `GeneratorIndex`描述的 Pauli 术语的系数。
+summary: 提取由描述的 Pauli 术语的系数`GeneratorIndex`。
 syntax: 'function PauliCoefficientFromGenIdx (generatorIndex : Microsoft.Quantum.Simulation.GeneratorIndex) : Double'
 input:
   content: '(generatorIndex : Microsoft.Quantum.Simulation.GeneratorIndex)'
   types:
   - name: generatorIndex
-    summary: 对 Pauli 术语进行编码的 `GeneratorIndex` 类型。
+    summary: '`GeneratorIndex`对 Pauli 术语进行编码的类型。'
     uid: microsoft.quantum.simulation.generatorindex
 output:
   content: Double
   types:
-  - summary: '`GeneratorIndex`描述的术语的系数。'
+  - summary: 描述的术语的系数`GeneratorIndex`。
     isPrimitive: true
     uid: Double
 metadata:
-  ms.openlocfilehash: f4e3412028f11758e5e4dbf50616ede1ed6f294a
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: 8fbf424210cde86aa57068f2f5d2b7a1c85033a7
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73065412"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682533"
