--- a/api/qsharp/microsoft.quantum.simulation.paulievolutionset.yml
+++ b/api/qsharp/microsoft.quantum.simulation.paulievolutionset.yml
@@ -4,7 +4,7 @@ name: PauliEvolutionSet
 type: function
 namespace: Microsoft.Quantum.Simulation
 summary: 将 dynamical 生成器表示为一组 simulatable 入口和 Pauli 中的扩展。
-remarks: 这是由 <xref:microsoft.quantum.simulation.paulievolutionfunction>的部分应用程序获取的。
+remarks: 这是由的部分应用程序<xref:microsoft.quantum.simulation.paulievolutionfunction>获取的。
 syntax: 'function PauliEvolutionSet () : Microsoft.Quantum.Simulation.EvolutionSet'
 input:
   content: ()
@@ -12,12 +12,12 @@ input:
 output:
   content: Microsoft.Quantum.Simulation.EvolutionSet
   types:
-  - summary: '`EvolutionSet`，它将 Pauli 基础的 `GeneratorIndex` 映射到 "EvolutionUnitary"。'
+  - summary: 一个`EvolutionSet` ，它将`GeneratorIndex` Pauli 基础的映射到 "EvolutionUnitary"。
     uid: microsoft.quantum.simulation.evolutionset
 metadata:
-  ms.openlocfilehash: cd1180caa3e2afeea044e409ddde9ac414a7ee84
-  ms.sourcegitcommit: edcf15044d7bdf4f8b21fb8f6af4bde475eb13a0
+  ms.openlocfilehash: f76b472aed8ea4500ca642bf918872ada89717eb
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/05/2019
-  ms.locfileid: "73065378"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682518"
