--- a/api/qsharp/microsoft.quantum.simulation.quantumwalkbyqubitization.yml
+++ b/api/qsharp/microsoft.quantum.simulation.quantumwalkbyqubitization.yml
@@ -7,9 +7,9 @@ summary: >-
   将块编码反射转换为量程审核。
 
 
-  给定一个由单一 $U $ 表示的 `BlockEncodingReflection`，该类型对某个运算符 $H 相关，并将其转换为量程审核 $W $，其中包含 $ \pm e ^ {\pm i\sin ^{-1}（H）} $ 的范围。
+  给定一个`BlockEncodingReflection`由单一 $U $ 表示的，它对某个运算符 $H $ 相关的运算符进行编码，并将其转换为量程审核 $W $，其中包含 $ \pm e ^{-1}{\Pm i\sin ^ （H）} $ 的范围。
 syntax: 'function QuantumWalkByQubitization (blockEncoding : Microsoft.Quantum.Simulation.BlockEncodingReflection) : ((Qubit[], Qubit[]) => Unit is Adj + Ctl)'
-references: '- Hamiltonian 模拟 by Qubitization Guang 脱离 Hao Low、Isaac 语 https://arxiv.org/abs/1610.06546'
+references: '- Hamiltonian 模拟 by Qubitization Guang 脱离 Hao Low、Isaac 语https://arxiv.org/abs/1610.06546'
 input:
   content: '(blockEncoding : Microsoft.Quantum.Simulation.BlockEncodingReflection)'
   types:
@@ -18,7 +18,7 @@ input:
 output:
   content: ((Qubit[], Qubit[]) => Unit is Adj + Ctl)
   types:
-  - summary: 量程审核 $W $ `a` 并 `s` 阻止编码 $H $ 的寄存器，并包含 $ \pm e ^ {\pm i\sin ^{-1}（H）} $ 的范围。
+  - summary: 量程审核 $W $ 联合在寄存器`a`上，并`s`对 $H $ 进行阻止编码，并包含 $ \pm e ^ {\Pm i\sin ^{-1}（H）} $ 的种类。
     isOperation: true
     input:
       types:
@@ -39,9 +39,9 @@ seeAlso:
 - microsoft.quantum.canon.blockencoding
 - microsoft.quantum.canon.blockencodingreflection
 metadata:
-  ms.openlocfilehash: aed748abe8f3468da0cc772606afc4f577c4abeb
-  ms.sourcegitcommit: ca5015fed409eaf0395a89c2e4bc6a890c360aa2
+  ms.openlocfilehash: e2a6c0469b730140b8584e8cff2aad2d68254793
+  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/29/2020
-  ms.locfileid: "76869145"
+  ms.lasthandoff: 05/01/2020
+  ms.locfileid: "82682503"
